creusot/tests/should_fail/prusti/index_invalid.stderr
error[creusot]: the expression's home `'old` must match the current time slice `'curr`
 --> index_invalid.rs:5:22
  |
5 | #[ensures(*result == old(*v)@[0])]
  |                      ^^^^^^^

error: aborting due to previous error

